--- a/Localization/german.json
+++ b/Localization/german.json
@@ -7,9 +7,9 @@
 		"COPIED":              "✔ Kopiert",
 		"HASH":                "Hash",
 		"CHECK_AGAINST":       "Vergleichen mit:",
-		"EXPORT_TO":           "Exportieren als Sumfile:",
+		"EXPORT_TO":           "Exportieren als Prüfsummendatei:",
 		"EXPORT_BTN":          "Exportieren...",
-		"SUMFILE":             "Als Sumfile interpretiert.",
+		"SUMFILE":             "Als Prüfsummendatei interpretiert.",
 		"DONE":                "Fertig!",
 		"PROCESSING":          "In Bearbeitung...",
 		"HASHES":              "Hashwerte",
