--- a/Localization/spanish.json
+++ b/Localization/spanish.json
@@ -6,14 +6,14 @@
 		"ALGORITHM":           "Algoritmo",
 		"COPIED":              "✔ Copiado",
 		"HASH":                "Hash",
-		"CHECK_AGAINST":       "Verificar contra:",
-		"EXPORT_TO":           "Exportar a sumfile:",
+		"CHECK_AGAINST":       "Comparar con:",
+		"EXPORT_TO":           "Exportar como archivo de checksum:",
 		"EXPORT_BTN":          "Exportar...",
-		"SUMFILE":             "Interpretando como sumfile.",
-		"DONE":                "Completado!",
-		"PROCESSING":          "Procesando...",
+		"SUMFILE":             "Interpretado como un archivo de checksum.",
+		"DONE":                "¡Listo!",
+		"PROCESSING":          "En proceso...",
 		"HASHES":              "Hashes",
-		"CLIPBOARD":           "Al portapapeles",
+		"CLIPBOARD":           "Al Portapapeles",
 		"NOMATCH":             "No se encontraron coincidencias.",
 		"ERROR":               "Error"
 	}
