remove fonts from translation

--- a/Localization/da-dk.json
+++ b/Localization/da-dk.json
@@ -16,7 +16,6 @@
         "CLIPBOARD": "Til clipboard",
         "NOMATCH": "Intet match fundet.",
         "ERROR": "Fejl",
-        "CANCEL": "Annuller",
-        "FONT": "MS Shell Dlg"
+        "CANCEL": "Annuller"
     }
 }
