--- a/Localization/de-de.json
+++ b/Localization/de-de.json
@@ -37,7 +37,6 @@
         "COPY_LINE": "Zeile kopieren",
         "COPY_HASH": "Hash kopieren",
         "CHECK_FOR_UPDATES": "Auf Updates prüfen",
-        "CANCEL": "Abbrechen",
-        "FONT": "MS Shell Dlg"
+        "CANCEL": "Abbrechen"
     }
 }
