--- a/Localization/zh-cn.json
+++ b/Localization/zh-cn.json
@@ -16,27 +16,30 @@
         "CLIPBOARD": "到剪贴板",
         "NOMATCH": "未找到匹配项。",
         "ERROR": "错误",
-        "SUMFILE_BANNER_DATE": "在标语中加入日期",
-        "SUMFILE_BANNER": "在导出的文件中加入标语",
-        "UPDATE_NEWEST_TITLE": "恭喜",
-        "UPDATE_DISABLED_IN_DEV_BUILD": "开发构建版中无效",
-        "UPDATE_NEWEST_TEXT": "您已使用最新版",
-        "UPDATE_AVAILABLE_TEXT": "新版本 %hu.%hu.%hu 可用",
-        "UPDATE_AVAILABLE_TITLE": "更新可用",
-        "VT_NOT_FOUND": "数据库中未找到",
-        "VT_NO_COMPATIBLE": "未启用兼容的算法",
-        "COPY_EVERYTHING": "复制全部",
-        "COPY_FILE": "复制文件名",
-        "COPY_LINE": "复制整行",
-        "COPY_HASH": "复制校验值",
-        "CHECK_FOR_UPDATES": "检查更新",
-        "SUMFILE_DOT_HASH_COMPATIBLE": "将 sumfiles 导出为 corz .hash 兼容性格式",
-        "SUMFILE_FORWARD_SLASHES": "在导出的文件中使用正斜杠",
-        "SUMFILE_USE_DOUBLE_SPACE": "sumfile 导出时使用双空格而非空格加星号",
-        "SUMFILE_UNIX_ENDINGS": "文件以 Unix 换行符导出",
-        "SUMFILE_UPPERCASE": "校验值导出为大写字母",
-        "LOOK_FOR_SUMFILES": "寻找与被校验文件相邻的 sumfile",
+        "CANCEL": "取消",
         "DISPLAY_UPPERCASE": "校验值显示为大写字母",
-        "CANCEL": "取消"
+        "LOOK_FOR_SUMFILES": "寻找与被校验文件相邻的 sumfile",
+        "SUMFILE_UPPERCASE": "校验值导出为大写字母",
+        "SUMFILE_UNIX_ENDINGS": "文件以 Unix 换行符导出",
+        "SUMFILE_USE_DOUBLE_SPACE": "sumfile 导出时使用双空格而非空格加星号",
+        "SUMFILE_FORWARD_SLASHES": "在导出的文件中使用正斜杠",
+        "SUMFILE_DOT_HASH_COMPATIBLE": "将 sumfiles 导出为 corz .hash 兼容性格式",
+        "SUMFILE_BANNER": "在导出的文件中加入标语",
+        "SUMFILE_BANNER_DATE": "在标语中加入日期",
+        "CHECK_FOR_UPDATES": "检查更新",
+        "COPY_HASH": "复制校验值",
+        "COPY_LINE": "复制整行",
+        "COPY_FILE": "复制文件名",
+        "COPY_EVERYTHING": "复制全部",
+        "VT_NO_COMPATIBLE": "未启用兼容的算法",
+        "VT_NOT_FOUND": "数据库中未找到",
+        "UPDATE_DISABLED_IN_DEV_BUILD": "开发构建版中无效",
+        "UPDATE_AVAILABLE_TITLE": "更新可用",
+        "UPDATE_AVAILABLE_TEXT": "新版本 %hu.%hu.%hu 可用",
+        "UPDATE_NEWEST_TITLE": "恭喜",
+        "UPDATE_NEWEST_TEXT": "您已使用最新版",
+        "CLIPBOARD_AUTOENABLE":"如果剪贴板包含Hash，则自动启用该Hash长度的算法",
+        "CLIPBOARD_AUTOENABLE_IF_NONE":"当没有符合剪切板字符串长度的Hash时启用的算法",
+        "CLIPBOARD_AUTOENABLE_EXCLUSIVE":"禁用所有其他算法"
     }
 }
