--- a/Localization/ar.json
+++ b/Localization/ar.json
@@ -1,6 +1,6 @@
 {
     "langid": "LANG_ARABIC",
-    "sublangid": "SUBLANG_NEUTRAL",
+    "sublangid": "SUBLANG_DEFAULT",
     "strings": {
         "FILENAME": "الاسم",
         "ALGORITHM": "الخوارزمية",
