--- a/Localization/de-de.json
+++ b/Localization/de-de.json
@@ -1,6 +1,6 @@
 {
     "langid": "LANG_GERMAN",
-    "sublangid": "SUBLANG_GERMAN",
+    "sublangid": "SUBLANG_DEFAULT",
     "strings": {
         "FILENAME": "Name",
         "ALGORITHM": "Algorithmus",
