--- a/Localization/es-es.json
+++ b/Localization/es-es.json
@@ -1,6 +1,6 @@
 {
     "langid": "LANG_SPANISH",
-    "sublangid": "SUBLANG_SPANISH",
+    "sublangid": "SUBLANG_DEFAULT",
     "strings": {
         "FILENAME": "Nombre",
         "ALGORITHM": "Algoritmo",
