--- a/Localization/fr-fr.json
+++ b/Localization/fr-fr.json
@@ -1,6 +1,6 @@
 {
     "langid": "LANG_FRENCH",
-    "sublangid": "SUBLANG_FRENCH",
+    "sublangid": "SUBLANG_DEFAULT",
     "strings": {
         "FILENAME": "Nom",
         "ALGORITHM": "Algorithme",
