--- a/Localization/it-it.json
+++ b/Localization/it-it.json
@@ -1,6 +1,6 @@
 {
     "langid": "LANG_ITALIAN",
-    "sublangid": "SUBLANG_ITALIAN",
+    "sublangid": "SUBLANG_DEFAULT",
     "strings": {
         "FILENAME": "Nome del file",
         "ALGORITHM": "Algoritmo",
