--- a/Localization/ko.json
+++ b/Localization/ko.json
@@ -1,6 +1,6 @@
 {
     "langid": "LANG_KOREAN",
-    "sublangid": "SUBLANG_KOREAN",
+    "sublangid": "SUBLANG_DEFAULT",
     "strings": {
         "FILENAME": "이름",
         "ALGORITHM": "알고리즘",
