--- a/Localization/nl.json
+++ b/Localization/nl.json
@@ -1,6 +1,6 @@
 {
     "langid": "LANG_DUTCH",
-    "sublangid": "SUBLANG_DUTCH_NL",
+    "sublangid": "SUBLANG_DEFAULT",
     "strings": {
         "FILENAME": "Bestandsnaam",
         "ALGORITHM": "Algoritme",
