--- a/Localization/ru-ru.json
+++ b/Localization/ru-ru.json
@@ -42,7 +42,7 @@
         "SUMFILE_UNIX_ENDINGS": "Экспорт файлов с окончанием строк в Unix-формате",
         "LOOK_FOR_SUMFILES": "Поиск хэш-файлов рядом с обрабатываемыми файлами",
         "SETTINGS_TITLE": "Настройки",
-        "SUMFILE_ALGORITHM_ONLY": "Отключать другие алгоритмы при обработке файла сумм с известным алгоритмом",
+        "SUMFILE_ALGORITHM_ONLY": "Отключать другие алгоритмы при обработке хэш-файла с заданным алгоритмом",
         "HASH_SUMFILE_TOO": "Дополнительно вычислять хэш файла с суммами при его обработке",
         "CHECKAGAINST_AUTOFORMAT": "Автоматически форматировать хеши вставленные в поле проверки",
         "ITEMS_MATCHING": "Совпадает %d файла(ов)",
