Alternative PL translation
Updated with common used forms of HAS (like "hashe" - "dwa hashe zostały znalezione" - means "two hashes found")
More about "hash" word used in Polish Lang. : https://pl.wikipedia.org/wiki/Hash
Changed "suma" to "hash" when message is about hash.
Minor changes made to other messages.

--- a/Localization/pl.json
+++ b/Localization/pl.json
@@ -5,30 +5,30 @@
         "FILENAME": "Nazwa",
         "ALGORITHM": "Algorytm",
         "COPIED": "✔ Skopiowano",
-        "HASH": "Suma kontrolna",
+        "HASH": "Hash",
         "CHECK_AGAINST": "Porównaj z:",
         "EXPORT_TO": "Eksportuj jako plik sum:",
         "EXPORT_BTN": "Eksportuj…",
         "SUMFILE": "Zinterpretowano jako plik sum.",
         "DONE": "Skończone!",
         "PROCESSING": "Przetwarzanie…",
-        "HASHES": "Sumy",
+        "HASHES": "Hashe",
         "CLIPBOARD": "Do schowka",
         "NOMATCH": "Nie znaleziono dopasowania.",
         "ERROR": "Błąd",
         "CANCEL": "Anuluj",
-        "DISPLAY_UPPERCASE": "Wyświetlaj sumy wielkimi literami",
-        "LOOK_FOR_SUMFILES": "Wyszukaj pliki sum obok przetwarzanych plików",
-        "SUMFILE_UPPERCASE": "Eksportuj sumy wielkimi literami",
-        "SUMFILE_UNIX_ENDINGS": "Eksportuj pliki z uniksowymi znakami końca linii",
+        "DISPLAY_UPPERCASE": "Wyświetlaj hashe wielkimi literami",
+        "LOOK_FOR_SUMFILES": "Wyszukaj pliki sum obok przetwarzanych hashy dla plików",
+        "SUMFILE_UPPERCASE": "Eksportuj hashe wielkimi literami",
+        "SUMFILE_UNIX_ENDINGS": "Eksportuj pliki jako ze znakami końca linii zgodnymi z Unix",
         "SUMFILE_USE_DOUBLE_SPACE": "Eksportuj pliki sum z ciągiem podwójnej spacji zamiast ciągu \"spacja-gwiazdka\"",
-        "SUMFILE_FORWARD_SLASHES": "Użyj ścieżek z ukośnikiem prawym w eksportowanych plikach",
+        "SUMFILE_FORWARD_SLASHES": "Użyj ścieżek z ukośnikiem prawym (slash, "/") w eksportowanych plikach",
         "SUMFILE_DOT_HASH_COMPATIBLE": "Eksportuj pliki sum w formacie zgodnym z corz .hash",
         "SUMFILE_BANNER": "Dodaj baner do eksportowanych plików",
         "SUMFILE_BANNER_DATE": "Dodaj datę do banera",
         "CHECK_FOR_UPDATES": "Sprawdź aktualizacje",
-        "COPY_HASH": "Skopiuj sumę",
-        "COPY_LINE": "Skopiuj wiersz",
+        "COPY_HASH": "Skopiuj hash",
+        "COPY_LINE": "Skopiuj linię",
         "COPY_FILE": "Skopiuj nazwę pliku",
         "COPY_EVERYTHING": "Skopiuj wszystko",
         "VT_NO_COMPATIBLE": "Brak włączonego kompatybilnego algorytmu",
@@ -38,13 +38,13 @@
         "UPDATE_AVAILABLE_TEXT": "Dostępna jest nowa wersja %hu.%hu.%hu",
         "UPDATE_NEWEST_TITLE": "Gratulacje",
         "UPDATE_NEWEST_TEXT": "Masz już najnowszą wersję",
-        "CLIPBOARD_AUTOENABLE": "Włącz automatycznie algorytmy o odpowiedniej długości, jeśli suma jest zawarta w schowku",
+        "CLIPBOARD_AUTOENABLE": "Jeśli schowek zawiera hash włącz automatycznie algorytmy o długości długości odpowiadającej algorytmom",
         "CLIPBOARD_AUTOENABLE_IF_NONE": "Tylko, jeśli nie są włączone algorytmy o takiej długości",
         "CLIPBOARD_AUTOENABLE_EXCLUSIVE": "Wyłącz wszelkie inne algorytmy",
         "SETTINGS_TITLE": "Ustawienia",
-        "CHECKAGAINST_AUTOFORMAT": "Sformatuj automatycznie wklejone sumy w polu porównania",
-        "CHECKAGAINST_STRICT": "Tryb ścisły dla pola porównania sumy",
-        "HASH_SUMFILE_TOO": "Podczas przetwarzania pliku sum oblicz również sumy do tego pliku",
+        "CHECKAGAINST_AUTOFORMAT": "Sformatuj automatycznie wklejone hashe w polu porównania",
+        "CHECKAGAINST_STRICT": "Tryb ścisły dla pola porównania hashy",
+        "HASH_SUMFILE_TOO": "Podczas przetwarzania pliku hashy oblicz również hash tego pliku",
         "ITEM_MATCHING": "1 dopasowany plik",
         "ITEMS_MATCHING": "%d dopasowanych plików",
         "SUMFILE_ALGORITHM_ONLY": "Wyłącz pozostałe algorytmy podczas przetwarzania pliku sum znanego algorytmu"
