mass language fixup (fixes #98)

--- a/Localization/pl-PL.json
+++ b/Localization/pl-PL.json
@@ -1,6 +1,6 @@
 {
     "langid": "LANG_POLISH",
-    "sublangid": "SUBLANG_DEFAULT",
+    "sublangid": "SUBLANG_POLISH_POLAND",
     "strings": {
         "FILENAME": "Nazwa",
         "ALGORITHM": "Algorytm",
