--- a/Localization/sk-SK.json
+++ b/Localization/sk-SK.json
@@ -1,6 +1,6 @@
 {
     "langid": "LANG_SLOVAK",
-    "sublangid": "SUBLANG_DEFAULT",
+    "sublangid": "SUBLANG_SLOVAK_SLOVAKIA",
     "strings": {
         "FILENAME": "Názov",
         "ALGORITHM": "Algoritmus",
