--- a/Localization/da-DK.json
+++ b/Localization/da-DK.json
@@ -1,6 +1,6 @@
 {
     "langid": "LANG_DANISH",
-    "sublangid": "SUBLANG_DEFAULT",
+    "sublangid": "SUBLANG_DANISH_DENMARK",
     "strings": {
         "FILENAME": "Navn",
         "ALGORITHM": "Algoritme",
