--- a/Localization/ja-JP.json
+++ b/Localization/ja-JP.json
@@ -1,6 +1,6 @@
 {
     "langid": "LANG_JAPANESE",
-    "sublangid": "SUBLANG_DEFAULT",
+    "sublangid": "SUBLANG_JAPANESE_JAPAN",
     "strings": {
         "FILENAME": "ファイル名",
         "ALGORITHM": "アルゴリズム",
