--- a/Localization/sl-SI.json
+++ b/Localization/sl-SI.json
@@ -1,6 +1,6 @@
 {
     "langid": "LANG_SLOVENIAN",
-    "sublangid": "SUBLANG_SLOVENIAN_SI",
+    "sublangid": "SUBLANG_SLOVENIAN_SLOVENIA",
     "strings": {
         "FILENAME": "Ime datoteke",
         "ALGORITHM": "Algoritem",
