--- a/Localization/en-US.json
+++ b/Localization/en-US.json
@@ -11,6 +11,7 @@
         "EXPORT_BTN": "Export…",
         "SUMFILE": "Interpreted as sumfile.",
         "DONE": "Done!",
+        "SUMMARY": "Summary",
         "PROCESSING": "Processing…",
         "HASHES": "Hashes",
         "CLIPBOARD": "To clipboard",
