--- a/Localization/bg.json
+++ b/Localization/bg.json
@@ -1,6 +1,6 @@
 {
     "langid": "LANG_BULGARIAN",
-    "sublangid": "SUBLANG_BULGARIAN_BG",
+    "sublangid": "SUBLANG_BULGARIAN_BULGARIA",
     "strings": {
         "FILENAME": "Име",
         "ALGORITHM": "Алгоритъм",
